# scsilhouette

./: .buildinfo  .gitignore  Dockerfile  README.html  README.md  click.html  directory_tree.sh  environment.yml  genindex.html  index.html  main.nf  modules.html  nextflow.config  process.html  py-modindex.html  pyproject.toml  scsilhouette.cli.html  scsilhouette.compute.html  scsilhouette.download.html  scsilhouette.html  scsilhouette.nsforest.html  scsilhouette.viz.html  search.html  searchindex.js  setup.cfg
.github/workflows/: deploy-docs.html  docker-build-push-image.yml  docker-build.yml  docker-publish.yml  docs.yml
_modules/: index.html
_modules/scsilhouette/: compute.html  download.html  nsforest.html  viz.html
conf/: aws.config  slurm.config
docs/: conf.py
docs/source/: conf.py  index.rst  modules.rst  process.rst  scsilhouette.compute.cli.rst  scsilhouette.compute.rst  scsilhouette.download.cli.rst  scsilhouette.nsforest.cli.rst  scsilhouette.viz.cli.rst  scsilhouette.viz.rst  viz_fscore_help.rst
modules/: compute_silhouette.nf  merge_report.nf  viz_dataset_summary.nf  viz_distribution.nf  viz_dotplot.nf  viz_heatmap.nf  viz_summary.nf
src/scsilhouette/: __init__.py  cli.py  compute.py  download.py  inspect_h5ad_annotations.py  logging_config.py  nsforest.py  utils.py  viz.py
tests/: test_cli.py  test_compute.py  test_download.py  test_viz.py
workflows/: main.nf
