[metadata]
name = scsilhouette
version = 0.1.0
author = Anne Deslattes Mays, Ph.D.
description = Compute silhouette scores for single-cell datasets
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    scsilhouette = scsilhouette.cli:main
